nav spacing fix and add gradient border

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -40,7 +40,7 @@
       flex-direction: row;
       align-items: flex-start;
       display: flex;
-      gap: 0rem;
+      gap: 2rem;
     }
   }
 }
@@ -63,8 +63,9 @@
     padding: 0.5rem 2rem;
 
     border-radius: var(--border-radius);
-    border: 1px solid transparent;
     position: relative;
+    display: inline-block;
+
     @include media('>desktop') {
       margin: 1rem 1rem;
       font-size: 1.8rem;
@@ -77,7 +78,18 @@
 
   & a.active {
     color: var(--white);
-    border: 2px solid var(--lime4);
     border-radius: var(--border-radius);
+    position: relative;
+    background-color: var(--blue9);
+
+    &::after,
+    &::before {
+      content: '';
+      background: conic-gradient(from 145deg, var(--lime4), var(--green3));
+      inset: -0.2rem;
+      position: absolute;
+      border-radius: inherit;
+      z-index: -1;
+    }
   }
 }
